Testable web page, mock for web service, more tests, pretty output

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 labyrinth {
-  setting = ""
+  output = "data/output/map.xml"
 }
 
 http {
@@ -8,5 +8,5 @@ http {
 }
 
 site {
-  exclude = [blog, community, news, forum, cgi]
+  exclude = [blog/, news/, forum/, cgi]
 }
